// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

// Restate built-in services.
// This package contains the definition of Restate built-in services.
// To invoke them, check out the documentation: https://docs.restate.dev/services/invocation
package dev.restate;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "dev.restate.generated";
option go_package = "restate.dev/sdk-go/pb";

service Awakeables {
  // Resolve an Awakeable with a result value.
  rpc Resolve(ResolveAwakeableRequest) returns (google.protobuf.Empty);
  // Reject an Awakeable with a reason.
  rpc Reject(RejectAwakeableRequest) returns (google.protobuf.Empty);
}

message ResolveAwakeableRequest {
  // Base64 encoded identifier of the Awakeable to resolve.
  string id = 1;
  bytes result = 2;
}

message RejectAwakeableRequest {
  // Base64 encoded identifier of the Awakeable to reject.
  string id = 1;

  // Rejection reason.
  string reason = 2;
}